Redesign the delegate script (#148)